# diffpy.labpdfproc

./: .buildinfo  .coveragerc  .gitattributes  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  cookiecutter.json  environment.yml  genindex.html  index.html  installation.html  license.html  min_versions.html  objects.inv  prevent_commit_to_main.sh  py-modindex.html  pyproject.toml  release-history.html  release.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.github/workflows/: build-wheel-release-upload.yml  check-news-item.yml  docs.yml  main.yml  matrix-and-codecov-on-merge-to-main.yml  publish-docs-on-release.yml  testing.yml  tests-on-pr.yml
_modules/: index.html
_modules/diffpy/labpdfproc/: functions.html  labpdfprocapp.html  mud_calculator.html  tools.html
_sources/: index.rst.txt  license.rst.txt
_sources/api/: diffpy.labpdfproc.example_package.rst.txt
_sources/examples/: functions-example.rst.txt
_sources/utilities/: labpdfprocapp-utility.rst.txt
_static/: documentation_options.js
api/: diffpy.labpdfproc.data.html  diffpy.labpdfproc.example_package.html  diffpy.labpdfproc.html
diffpy/labpdfproc/: _version.py  functions.py  labpdfprocapp.py
doc/: Makefile  conf.py
doc/examples/: examples.rst  functions_example.rst
doc/manual/source/: conf.py
doc/source/: conf.py  index.rst  usage.rst
doc/source/api/: diffpy.labpdfproc.data.rst  diffpy.labpdfproc.rst
doc/source/examples/: examples.rst  functions-example.rst  functions_example.rst  labpdfprocapp-example.rst  labpdfprocapp_example.rst  tools_example.rst
doc/source/utilities/: functions-utility.rst  functions_utility.rst  tools-utility.rst  tools_utility.rst  utilities.rst
doc/utilities/: functions_utility.rst  utilities.rst
docs/: Makefile
docs/examples/: zro2_mo_proc.chi
docs/source/: conf.py  index.rst  installation.rst
docs/source/api/: diffpy.my_labpdfproc.example_package.rst  diffpy.my_labpdfproc.rst
docs/source/examples/: labpdfprocapp-example.rst  tools-example.rst
examples/: examples.html  functions-example.html  labpdfprocapp-example.html  tools-example.html
news/: api_doc.rst  applymud.rst  check-saved-files.rst  compute_cve.rst  doc0.3.0.rst  docs-render.rst  docstring-tests.rst  fastcalto7.rst  folder-rst-readme.rst  functions-docs.rst  getmud.rst  gooey-fix.rst  gui.rst  load-data.rst  main-doc.rst  muD-options.rst  muD-theoretical.rst  muD.rst  muD2.rst  output-wavelength.rst  py10.rst  py313.rst  recut.rst  recut2.rst  remove-namespace.rst  remove-packing-fraction.rst  remove-pf.rst  tests-on-pr-wf.rst  tools-doc.rst  update-ref.rst  utils-updates.rst  wavelength-config.rst  wavelength-workflow.rst  wavelength.rst  xtype.rst
requirements/: conda.txt  docs.txt  requirements-dev.txt  run.txt  test.txt  tests.txt
src/diffpy/: __init__.py
src/diffpy/labpdfproc/: __init__.py  fast_cve.py  functions.py  getmud.py  labpdfprocapp.py  mud_calculator.py  tools.py  user_config.py  user_functions.py  version.py
src/diffpy/labpdfproc/data/: coefficient_list.csv  inverse_cve.xy  wavelengths_config.json
src/diffpy/labpdfproc/tests/: conftest.py  debug.py  run.py  test_examples.py  test_fast_cve.py  test_functions.py  test_tools.py
src/diffpy/my_labpdfproc/: __init__.py  my_labpdfproc_app.py  version.py
tests/: conftest.py  test_fixtures.py  test_functions.py  test_getmud.py  test_labpdfprocapp.py  test_mud_calculator.py  test_tools.py  test_version.py
utilities/: functions-utility.html  labpdfprocapp-utility.html  tools-utility.html  utilities.html
